--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -13,7 +13,7 @@
 }
 
 @mixin tablet {
-    @media only screen and (max-width: $tablet-width) {
+    @media only screen and (max-width:768px) {
         @content;
     }
 }
