--- a/src/Components/dashboard-wrapper/dashboard-wrapper.scss
+++ b/src/Components/dashboard-wrapper/dashboard-wrapper.scss
@@ -28,17 +28,16 @@
         @media(max-width: 1220px){
             width: 300px;
         }
-        @media(max-width: 1045px){
-            position: relative;
-            width: 100%;
-        }
         @media(max-width: 900px){
-            width: 100%;
-            overflow-x: hidden;
-            padding-right: 10px;
-            position:relative;
+            width: 280px;
         }
-
+        @media(max-width: 849px){
+            width: 100%;
+            margin-top: 30px;
+            position: relative;
+            overflow-y: auto;
+            border-radius: 10px;
+        }
         @include tablet {
             position: relative;
             padding: $mobileSpacing;
