--- a/src/Components/user-info/user-info.scss
+++ b/src/Components/user-info/user-info.scss
@@ -4,21 +4,61 @@
     @include flex(center, flex-start);
     padding:0;
     margin-left: -20px;
+    width: 100%;
+    @media only screen and (max-width: 1120px){
+        margin-left: -45px;
+    }
+    @media(max-width: 1080px){
+        margin-left: -55px;
+    }
+    @media only screen and (max-width: 1316px){
+        width: 100%;
+    }
+    @media(max-width: 890px){
+        width:100%;
+    }
+    @media only screen and (max-width: 768px){
+        margin-left: -30px;
+    }
+    
     input{
         width: 591.59px;
         height: 44px;
-        margin-right: 10px;
+        margin-right: 4px;
         border-radius: 3px;
         border: none;
         padding-left: 40px;
         padding-right: 20px;
         outline: none;
-        @media(max-width: 1220px){
-            width: 500px;
-            margin-left: -60px;
+        
+        @media only screen and (max-width: 1165px){
+            max-width: 70%;
+        }
+        @media only screen and (max-width: 1316px){
+            width: 425px;
+            margin-left: -10px;
+        }
+        @media(max-width: 1080px){
+            width:400px;
+        }
+        @media only screen and (max-width: 1040px){
+            width: 380px;
         }
         @media(max-width: 1045px) and(min-width:768px){
             width: 100%;
+        }
+        @media(max-width: 932px){
+            margin-left: -25px;
+        }
+        @media(max-width: 918px){
+            margin-left: -35px;
+        }
+        @media(max-width: 849px){
+            width: 400px;
+            margin-left: 5px;
+        }
+        @media only screen and (max-width: 768px){
+            width: 600px;
         }
         @media (max-width: 540px) {
             width: 100%;
@@ -35,7 +75,13 @@
             color: #bbb;
             left: 30px;
             @media (max-width: 1220px) {
-                left: -20px;
+                left: 15px;
+            }
+            @media(max-width: 900px){
+                left: -10px;
+            }
+            @media only screen and (max-width: 849px){
+             left:30px;
             }
             @media (max-width: 540px) {
                 left:45px;
@@ -49,9 +95,30 @@
         background: $sideactive;
         border-radius: 3px;
         border: none;
-        @media(max-width: 1045px) and(min-width:768px){
-            width: 80%;
+        @media only screen and (max-width: 1165px){
+            max-width: 40%;
+            margin-left: -70px;
         }
+        @media only screen and (max-width: 1040px){
+            margin-left: 13px;
+        }
+        @media only screen and (max-width: 1040px){
+            margin-left: -20px;
+        }
+        @media only screen and (max-width: 950px){
+            font-size: 13px;
+            margin-left: -60px;
+          }
+          @media(max-width: 918px){
+            margin-left: -75px;
+        }
+        @media(max-width: 900px){
+            margin-left: -90px;
+        }
+        @media(max-width: 850px){
+            margin-left: -100px;
+        }
+        
         @media(max-width: 540px){
             width: 50%;
         }
