--- a/src/Components/adminsidebar/admin.scss
+++ b/src/Components/adminsidebar/admin.scss
@@ -55,6 +55,8 @@
             width: 140px;
             height: var(--size);
             justify-content: left;
+            margin-top:20px;
+            margin-bottom: 40px;
             @media(max-width: 1440px){
                 margin-left: -70px;
             }
