--- a/src/Components/sidebar/sidebar.scss
+++ b/src/Components/sidebar/sidebar.scss
@@ -10,6 +10,7 @@
     height: 100vh;
     position: fixed;
     top: 0;
+    font-size: 13px;
     z-index: 100;
     &.active {
         font-weight: 600;
