--- a/src/Components/dashboard-wrapper/dashboard-wrapper.scss
+++ b/src/Components/dashboard-wrapper/dashboard-wrapper.scss
@@ -22,6 +22,7 @@
         height: 100vh;
         overflow-y: auto;
         padding: 2rem;
+        overflow-x: hidden;
         position: fixed;
         top: 0;
         right: 0;
