Media Queries Conclusion

--- a/src/Components/dashboard-wrapper/dashboard-wrapper.scss
+++ b/src/Components/dashboard-wrapper/dashboard-wrapper.scss
@@ -28,8 +28,11 @@
         @media(max-width: 1220px){
             width: 300px;
         }
+        @media(max-width: 1045px){
+            width: 270px;
+        }
         @media(max-width: 900px){
-            width: 280px;
+            width: 270px;
         }
         @media(max-width: 849px){
             width: 100%;
