--- a/src/Components/adminsidebar/admin.scss
+++ b/src/Components/adminsidebar/admin.scss
@@ -78,7 +78,7 @@
                 transform: translateY(30px) translateX(-20px);
             }
             @media(max-width: 540px){
-                margin-left: 0;
+                margin-left: 30px;
             }
         }
         .sidebar-close {
@@ -86,10 +86,11 @@
             display: none;
             i {
                 font-size: 2rem;
+                transform: translateY(-30px);
             }
 
             @include tablet {
-                display: block;
+                display: block; 
                 position:relative;
                 top: 35px;
             }
