--- a/src/Components/user-info/user-info.scss
+++ b/src/Components/user-info/user-info.scss
@@ -169,6 +169,9 @@
         @media only screen and (max-width: 414px){
             width: 220px;
         }
+        @media only screen and (max-width: 425px){
+            width: 190px;
+        }
         @media only screen and (max-width: 400px){
             margin-left:10px;
             width: 190px;
