--- a/src/Components/adminsidebar/admin.scss
+++ b/src/Components/adminsidebar/admin.scss
@@ -25,6 +25,9 @@
             color: $sideactive !important;
             font-weight: 600;
         }
+        i{
+            font-size: 24px;
+        }
     }
     @media(max-width: 1220px){
         width: 240px;
